--- a/style.css
+++ b/style.css
@@ -2,29 +2,24 @@ html, body {
     font-size: 1rem;
     background-color: black;
     box-sizing: border-box;
-    font-family: 'Fira Sans', sans-serif;
+    font-family: 'Major Mono Display', monospace;
     color: rgb(219, 219, 219);
     
 }
 
+/* FONT STYLES */
+
 a {
-    color: rgb(184, 184, 184);
-    font-family: 'Stylish';
+    color: rgb(240, 240, 240);
 }
 
 a:hover {
     color: azure;
 }
 
-header {
-    background-color: black;
-    max-height: 100vh;
-    min-height: 20vh;
-}
 
 h1, h2, h3, h4 {
     color: rgb(219, 219, 219);
-    font-family: 'Major Mono Display', monospace;
     cursor: context-menu;
 }
 
@@ -36,19 +31,30 @@ h2 {
     font-size: 3rem;
 }
 
+
+
 h4 {
     font-size: 1rem;
 }
 
-h3 {
-    font-family: 'Stylish';
+h5 {
+    font-size: 2rem;
 }
 
+p {
+    font-family: 'Fira Sans', sans-serif;
+}
+
+/* NAVIGATION */
 
 nav {
     border: dashed 0.2rem rgb(253, 229, 229);
     background-color: rgb(0, 0, 0);
-    font-family: 'Stylish';
+    
+}
+
+.navbar a {
+    color: white;
 }
 
 nav a:hover {
@@ -62,15 +68,18 @@ nav a {
 
 .navi-off {
     color: rgb(240, 240, 240);
-    font-family: 'Stylish';
+    font-family: 'Major Mono Display', monospace;
     margin: 0;
     padding: 0;
     cursor: context-menu;
 }
 
-nav ul {
-    list-style-type: none;
+/* OTHER */
+
+quote {
+    font-family: 'Major Mono Display', monospace;
 }
+
 
 .lines {
     width: 50%;
@@ -95,29 +104,41 @@ main {
 .card {
     color: black;
     font-weight: bold;
-    background-color: darkslategrey ;
+
 }
+
+button {
+    color: rgb(95, 95, 95);
+}
+
+.comment-box {
+    width: 50vw;
+    margin: 3vw 13vw 0vw 8vw;
+}
+
+.icons2 {
+    margin-right: 45vw;
+}
+
+.icons3 {
+    margin-right: 46.5vw;
+}
+
+/* IMAGE STYLES */
 
 
 menu img {
     width: 100%;
     height: 10vh;
     object-fit: cover;
-    border-radius: 0.5rem;
+    border-radius: .375rem;
+    -webkit-filter: grayscale(100%);
+    filter: grayscale(100%);
 }
 
-.photos-img {
-    object-position: 0 80%;
-}
-
-.phys-art-img {
-    object-position: 0 20%;
-}
-
-.album img {
+.album button img {
     width: 100%;
-    height: 70vh;
-    object-fit: cover;
+    object-fit: contain;
 }
 
 icons img {
@@ -127,25 +148,27 @@ icons img {
     filter: invert(1);
 }
 
-button {
-    color: rgb(95, 95, 95);
+profileImage img {
+    width: 100%;
+    object-fit: cover;
 }
 
-profileImage {
-    width: 10%;
-    height: 10vh;
-    object-fit: cover;
+
+.overlay {
+    opacity: 0.5;
+    background-color: #000000;
 }
 
 
 @media screen and (min-width: 576px) {
     
     header {
-        background-image: url(resources/IMG_6435.JPG);
+        background-image: url(resources/photo-buildingtop.JPEG);
         background-position: center;
         background-size: cover;
         padding: 10vh 20vh 10vh 20vh;
         height: 100vh;
+        border-radius: 0.5rem;
     }
 
 
@@ -164,7 +187,7 @@ profileImage {
         opacity: 0;
         transition: .5s ease;
         background-color: #000000;
-      }
+    }
 
     .menu-box:hover .overlay {
         opacity: 0.5;
