--- a/style.css
+++ b/style.css
@@ -1,20 +1,21 @@
 html, body {
     font-size: 1rem;
-    background-color: black;
+    background-color: rgb(21, 22, 21);
     box-sizing: border-box;
     font-family: 'Major Mono Display', monospace;
     color: rgb(219, 219, 219);
-    
 }
 
 /* FONT STYLES */
 
 a {
     color: rgb(240, 240, 240);
+    transition: 0.3s ease-in-out;
 }
 
 a:hover {
     color: azure;
+    text-decoration: line-through;
 }
 
 
@@ -59,11 +60,13 @@ nav {
 
 nav a:hover {
     color: rgb(202, 202, 202);
+    
 }
 
 nav a {
     color: rgb(95, 95, 95);
     text-decoration: none;
+    
 }
 
 .navi-off {
@@ -104,8 +107,12 @@ main {
 .card {
     color: black;
     font-weight: bold;
-
 }
+
+.album .card, .comment-box {
+    background-color: rgb(0, 0, 0);
+}
+
 
 button {
     color: rgb(95, 95, 95);
@@ -138,7 +145,7 @@ menu img {
 
 .album button img {
     width: 100%;
-    object-fit: contain;
+    object-fit: cover;
 }
 
 icons img {
