--- a/style.css
+++ b/style.css
@@ -1,8 +1,15 @@
+@font-face {
+    font-family: "Behance";
+    src:
+      local("Behance"),
+      url("resources/behance.ttf") format("truetype");
+  }
+
 html, body {
     font-size: 1rem;
-    background-color: rgb(28, 32, 30);
+    background-color: rgb(0, 0, 0);
     box-sizing: border-box;
-    font-family: 'Major Mono Display', monospace;
+    font-family: 'Behance', monospace;
     color: rgb(219, 219, 219);
 }
 
@@ -73,7 +80,7 @@ nav a {
 
 .navi-off {
     color: rgb(240, 240, 240);
-    font-family: 'Major Mono Display', monospace;
+    font-family: 'Behance', monospace;
     margin: 0;
     padding: 0;
     cursor: context-menu;
@@ -82,7 +89,7 @@ nav a {
 /* OTHER */
 
 quote {
-    font-family: 'Major Mono Display', monospace;
+    font-family: 'Behance', monospace;
 }
 
 
@@ -180,11 +187,15 @@ profile a:hover {
 
 
 @media screen and (min-width: 576px) {
-    
-    header {
-        background-image: url(resources/img/3.jpeg);
+    body {
+        background-image: url(resources/img/bg.jpg);
         background-position: center;
         background-size: cover;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+    }
+    
+    header {
         padding: 10vh 20vh 10vh 20vh;
         height: 100vh;
     }
