--- a/style.css
+++ b/style.css
@@ -24,20 +24,23 @@ a {
 }
 
 a:hover {
-    color: azure;
+    color: rgb(124, 151, 140);
     text-decoration: line-through;
 }
 
-
+contact a {
+    text-decoration: none;
+}
 
 
 h1, h2, h3, h4 {
-    color: rgb(219, 219, 219);
+    color: rgb(131, 146, 160);
     cursor: context-menu;
 }
 
 h1 {
     font-size: 7rem;
+
 }
 
 h2 {
@@ -55,17 +58,13 @@ h5 {
 }
 
 p {
+    color:rgb(167, 162, 158);
     font-family: 'Diphylleia', serif;
     font-size: 0.9rem;
 }
 
 /* NAVIGATION */
 
-nav {
-    border: dashed 0.2rem rgb(253, 229, 229);
-    background-color: rgb(0, 0, 0);
-    
-}
 
 .navbar a {
     font: 'Behance', monospace;
@@ -85,8 +84,9 @@ nav a {
 }
 
 .navi-off {
-    color: rgb(99, 122, 61);
+    color: rgb(124, 151, 140);
     font: 1.8rem 'Behance', monospace;
+    text-decoration: line-through;
     margin: 0;
     padding: 0;
     cursor: context-menu;
@@ -120,14 +120,17 @@ main {
 }
 
 .card {
-    color: black;
-    font-weight: bold;
+    background-color: rgb(23, 31, 37);
+
 }
 
-.album .card, .comment-box {
+.album {
     background-color: rgb(0, 0, 0);
 }
 
+.navbar-toggler-icon {
+    filter: invert(59%) sepia(17%) saturate(308%) hue-rotate(104deg) brightness(94%) contrast(91%);
+}
 
 button {
     color: rgb(95, 95, 95);
@@ -149,14 +152,6 @@ button {
 /* IMAGE STYLES */
 
 
-menu img {
-    width: 100%;
-    height: 10vh;
-    object-fit: cover;
-    border-radius: .375rem;
-    -webkit-filter: grayscale(100%);
-    filter: grayscale(100%);
-}
 
 .album button img {
     width: 100%;
@@ -170,20 +165,22 @@ icons img {
     filter: invert(1);
 }
 
+icons img:hover {
+    filter: invert(40%) sepia(4%) saturate(4541%) hue-rotate(41deg) brightness(108%) contrast(83%);
+}
+
 profileImage img {
     width: 100%;
     object-fit: cover;
 }
 
+
 profile a {
     font-family: 'Diphylleia', serif;
-    color: black;
-    transition: 0.3s ease-in-out;
+    color: rgb(124, 151, 140);
+
 }
 
-profile a:hover {
-    color: rgb(124, 151, 140);
-}
 
 
 .overlay {
@@ -208,14 +205,12 @@ profile a:hover {
 
 
     nav {
+        background-color: rgb(36, 35, 35);
         font-size: 1.5rem;
-        outline: dashed 0.2rem white;
+        outline: double 0.2rem rgb(192, 192, 192);
         border: 0;
     }
         
-    menu img {
-        height: 10rem;
-    }
 
 
     .overlay {
