--- a/style.css
+++ b/style.css
@@ -151,7 +151,14 @@ button {
 
 /* IMAGE STYLES */
 
-
+menu img {
+    width: 100%;
+    height: 10vh;
+    object-fit: cover;
+    border-radius: .375rem;
+    -webkit-filter: grayscale(100%);
+    filter: grayscale(100%);
+}
 
 .album button img {
     width: 100%;
@@ -211,7 +218,9 @@ profile a {
         border: 0;
     }
         
-
+    menu img {
+        height: 10rem;
+    }
 
     .overlay {
         opacity: 0;
